# StaxFS

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.rhel  Doxyfile  README.md
.github/workflows/: build.yml.disable  nvm-testing.yml  pre-commit.yml
cmake/: BuildDPDK.cmake  FindMake.cmake  GitVersion.cmake
conf/distributed_cxl_2_4_3_10/: client.toml  client_list2  meta-0.toml  meta-1.toml
conf/distributed_cxl_3_1_3_10/: client.toml  data-2.toml  meta-0.toml  meta-1.toml  meta-2.toml
conf/distributed_cxl_3_2_3_10/: client.toml  client_list  meta-0.toml  meta-1.toml  meta-2.toml
conf/distributed_cxl_3_4_3_10/: client.toml  data-0.toml  data-1.toml  meta-2.toml
conf/distributed_cxl_3_8_3_10/: client.toml  meta-0.toml  meta-1.toml  meta-2.toml
conf/distributed_cxl_4_4_3_10/: client.toml  data-2.toml  meta-1.toml
conf/distributed_cxl_5_4_3_10/: client.toml  data-0.toml  data-1.toml  meta-2.toml  meta-3.toml  meta-4.toml
conf/local/: client.toml  data-0.toml  data-1.toml  data-2.toml  meta-0.toml  meta-1.toml  meta-2.toml
docs/: 00-overview.md  01-common.md  02-cxl.md  03-server.md  04-client.md  05-proto-build-test.md  06-config.md  07-cxl-bandwidth-benchmark.md  README.md  debug.md
include/: version.h
include/client/: file_descriptor.h  g_constants.h  g_preload.h  posix_wrapper.h  preload.h  rpc_client.h
include/common/: config.h  dfs.h  exception.h  listdir_profile.h  logging.h  metadata_op_profile.h  metadata_types.h
include/cxl/: cxl_allocator.h  cxl_base.h  cxl_context.h  cxl_mem.h  cxl_ssd.h  device.h  gim_context.h  gim_mem.h
include/server/: abstract_data.h  abstract_md.h  compact_wal.h  concurrent_level_hashtable.h  cxl_persistence.h  data.h  dent_region.h  hashtable_stats.h  inode_array.h  level_hashtable.h  level_hashtable_traits.h  metadata.h  rpc_server.h  tag_hint.h
include/threading/: affinity.h
proto/: data.fbs  mdfdrequest.fbs  mdguardiancommonrequest.fbs  mdguardianheartrequest.fbs  mdmovenoderequest.fbs  mdpathcommonrequest.fbs  mdpathcommonresponse.fbs  mdpersistencerequest.fbs  mdrequest.fbs  metadata.fbs
scripts/: analyze_hint.py  analyze_md_op.py  build.sh  clear-hugepage.sh  disk-partition.sh  functions.sh  kill-servers.sh  mount-hugepage.sh  start-servers.sh  statistics.ipynb  verify_persistence.py
scripts/distributed/: THUCTC-data-load.sh  THUCTC-runner.sh  cp-runner.sh  data_load.py  dev-run-THUCTC.sh  dev-run-cp.sh  dev-run-filebench.sh  dev-run-mdtest-billion.sh  dev-run-mdtest.sh  filebench-runner.sh  kill-test-servers.sh  mdtest-billion-runner.sh  mdtest-runner.sh  organize-filebench-result.py  organize-mdtest-result.py  setup-test-servers.sh
scripts/insert_ns_delay/: Makefile  README.md  cpu-freq-stable.sh  main.cpp  run.sh
scripts/local/: README.md  dev-run-THUCTC.sh  dev-run-cp.sh  dev-run-filebench.sh  dev-run-ior.sh  dev-run-mdtest.sh  ior-runner.sh  kill-test-servers.sh  setup-test-servers.sh
src/: client_main.cc  dfs_client_cli.cc  hook.c  server_main.cc
src/client/: file_descriptor.cc  posix_wrapper.cc  preload.cc  rpc_client.cc
src/common/: config.cc  logging.cc
src/cxl/: cxl_allocator.cc  cxl_base.cc  cxl_context.cc  cxl_mem.cc  cxl_ssd.cc  device.cc  gim_context.cc  gim_mem.cc
src/server/: cxl_persistence.cc  data.cc  metadata.cc  rpc_server.cc
src/threading/: affinity.cc
test/: common.cc  data.cc  level_hashtable_test.cc  metadata.cc  persistence_metadata_test.cc  serdes.cc  test_cxl_helper.h
test/cxl/: cxl_lock_test.cc  cxl_read_write_test.cc  mlc_bw_grid.sh  write_latency.c
test/syscall/: concurrent.cc  data.cc  meta.cc
workloads/filebench/: create_file.f  delete_file.f  fileserver.f  ls.f  oltp.f  stat_file.f  varmail.f  webproxy.f  webserver.f
